gcc/testsuite/gdc.test/compilable/protection/issue20796/package.d
module issue20796;

package(issue20796) void foo()
{
}
