gcc/testsuite/gdc.test/fail_compilation/ice11968.d
void main() {  delete __FILE__  ; }
